kubernetes/youtube-tutorial-series-master/godwin-k8-files/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-mongoexpress
spec:
  selector:
    matchLabels:
      app: my-mongoexpress
  template:
    metadata:
      labels:
        app: my-mongoexpress
    spec:
      containers:
      - name: my-mongoexpress
        image: mongo-express
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
