kubernetes/youtube-tutorial-series-master/godwin-k8-files/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-mongodb
spec:
  selector:
    matchLabels:
      app: my-mongodb
  template:
    metadata:
      labels:
        app: my-mongodb
    spec:
      containers:
      - name: my-mongodb
        image: mongo
        ports:
        - containerPort: 27017
