kubernetes/youtube-tutorial-series-master/godwin-k8-files/mongo-express-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mongo-express-service
spec:
  selector:
    app: my-mongoexpress
  type: LoadBalancer
  ports:
  - port: 8081
    targetPort: 8081
    nodePort: 30000
