kubernetes/youtube-tutorial-series-master/godwin-k8-files/mongodb-deployment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mongodb-service
spec:
  selector:
    app: my-mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
