kubernetes/youtube-tutorial-series-master/godwin-k8-files/nginx-deployment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-Service
spec:
  selector:
    app: my-nginx
  ports:
  - port: 80
    targetPort: 8080
