kubernetes/youtube-tutorial-series-master/godwin-k8-files/mongo-express-deployment-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-mongo-express-ingress
  labels:
    name: my-mongo-express-ingress
spec:
  rules:
  - host: my-mongo-express.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-mongo-express-service
            port: 
              number: 8081
